# movielens-db

./: Dockerfile  README.md  app.py  ddl.sql  entrega.txt  pyproject.toml  requirements.txt
data/: .gitignore
notebooks/: movielens.ipynb
src/movielens_db/: data.py
