[tool.poetry]
name = "movielens_db"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src/movielens_db"}]

[tool.poetry.dependencies]
python = ">=3.7,<4"
oracledb = "^1.3.0"
pandas = "^2.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.22.0"
numpy = "^1.24.2"
setuptools = "^67.6.1"

# Extras
[tool.poetry.extras]
dev = ["ipykernel", "jupyter", "pytest-cov"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
